@@ -1,3 +1,7 @@
+2001-09-16  Jim Meyering  <meyering@lucent.com>
+
+	* mkdir.c: New file.
+
 2001-09-04  Paul Eggert  <eggert@twinsun.com>
 
 	* xgetcwd.c: Revert some of the previous change; intead,
